implementar flujo completo de postulación y gestión de candidatos, ademas de arreglo de problemas para la vista de empreas